--- a/index.html
+++ b/index.html
@@ -3,37 +3,38 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Susy web layouts</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <main>
+     <header><h1>This is a header</h1></header>
+     <article><p>Lorem ipsum dolor sit amet, error numquam pertinax qui ea, sit veri atqui periculis ex. Cu his paulo ubique, at sed quaeque eripuit appareat, et pro diceret fierent. Ei pri feugiat aliquando, vel altera platonem ea. Per harum viris id.<p>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+       </p>Possit nonumes in eum. Ex pro dico zril vituperata. Vis ferri utinam an, cu labitur instructior pro. Vix ut dolores vivendum periculis, cu mel alienum recteque. Cu enim sententiae persequeris vim, vitae tation ex sed. Ut indoctum repudiare sit, duis tollit dignissim in nam, ad enim ludus nec.</p>
 
+     </p>Qui in viris perpetua. Eum ad noster molestie similique, purto meis altera nam eu, tale solet posidonium an pro. Sit in admodum omittam gubergren, nam an choro deleniti comprehensam. Et tale copiosae facilisis pri, elit magna sit cu. Ea possim placerat per.</p>
+
+<p>Id cetero platonem delicata has, mel ei erroribus reprehendunt, quot mentitum suscipit in sed. Vel in sale eloquentiam. Nihil tantas sententiae et cum. Vel te choro veniam causae, persius molestiae ex pro. In dolore mediocritatem eam. No elit dictas causae eum, suscipit lucilius similique eam an, cu invenire patrioque eos.</p>
+
+<p>Cu usu posse mollis argumentum, sint omnium accusata ea per, graeco posidonium in eum. Autem sententiae vel ei, vim an nonumes dolorem periculis. Ei unum detracto his, quo at ceteros maiestatis necessitatibus. Nam equidem scriptorem scribentur ut, nusquam iracundia assueverit eum ei, facete admodum delicata in vix. Latine assentior vituperata mel cu.</p></article>
+       <aside><p>Lorem ipsum dolor sit amet, cu duo alia erat corpora. Ius vidit admodum suscipit in, eos dolorum admodum lucilius et, nam enim hinc dignissim no. Ius eu iusto meliore corrumpit, duo et prodesset liberavisse. Ad exerci feugiat pro. Nec atqui vivendo neglegentur no, postea utroque comprehensam ad sea, at eos fugit fierent qualisque.</p>
+
+<p>Ei nibh porro mundi qui, ne omnes integre vocibus qui. Graeci reprehendunt ei nec. Ipsum discere qui ad, dignissim reprimique et has. Amet omnium in pro, labores voluptatum referrentur et his. Nec alia malis labores no.</p></aside>
+<footer><h2>This is a footer</h2></footer>
+   </main>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+
+
     </body>
 </html>
