--- a/2.html
+++ b/2.html
@@ -15,25 +15,26 @@
 
 <body>
     <div class="wrap">
+        <ul>
+            <li><a href="index.html">1</a></li>
+            <li><a href="2.html">2</a></li>
+            <li><a href="3.html">3</a></li>
+            <li><a href="4.html">4</a></li>
+        </ul>
+
+
+
         <header>
-            <ul>
-                <li><a href="index.html">1</a></li>
-                <li>><a href="2.html">2</a></li>
-                <li>><a href="#">3</a></li>
-                <li>><a href="#">4</a></li>
-            </ul>
+            <p>header</p>
         </header>
         <article>
-            <span class="test">
-                test</span>
-            <span class="test">
-                test2</span>
+            <p>article</p>
         </article>
         <aside>
             <p>aside</p>
         </aside>
         <footer>
-            <h2>footer</h2>
+            <p>footer</p>
         </footer>
     </div>
 
