--- a/README.html
+++ b/README.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+</head>
+<body>
 <!-- 
 ## Synopsis
 
@@ -31,3 +37,6 @@ Let people know how they can dive into the project, include important links to t
 
 A short snippet describing the license (MIT, Apache, etc.)
  -->
+
+</body>
+</html>
