--- a/2.html
+++ b/2.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="wrap">
+    <div class="wraptwo">
         <ul>
             <li><a href="index.html">1</a></li>
             <li><a href="2.html">2</a></li>
